--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.7.0",
+    "@react-spring/web": "^9.4.5",
+    "@react-three/drei": "7.27.1",
+    "@react-three/fiber": "7.0.21",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,11 +24,10 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4",
-    "@react-three/drei": "7.27.1",
-    "@react-three/fiber": "7.0.21",
-    "three": "0.135.0"
+    "three": "0.135.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
